@@ -1,7 +1,7 @@
 plugins {
     id 'application'
     id 'org.openjfx.javafxplugin' version '0.1.0'
-    id 'org.beryx.runtime' version '1.12.7'
+    id 'org.beryx.runtime' version '1.13.0'
 }
 
 repositories {
@@ -25,10 +25,6 @@ java {
 
 application {
     mainClass = 'org.App'
-    applicationDefaultJvmArgs = [
-        '--module-path', "${projectDir}/jmods",
-        '--add-modules', 'javafx.controls,javafx.fxml'
-    ]
 }
 
 runtime {
